--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "author": "detailyang",
   "license": "MIT",
   "dependencies": {
+    "bunyan": "^1.7.1",
     "chai": "^3.5.0",
     "co": "^4.6.0",
     "ldapjs": "^1.0.0",
     "mocha": "^2.4.5",
     "request-promise": "^2.0.1",
-    "should": "^8.2.2"
+    "should": "^8.2.2",
+    "winston": "^2.2.0",
+    "winston-syslog": "^1.2.1"
   }
 }
