--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "cas ldap agent",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js"
+    "test": "NODE_ENV=test node_modules/mocha/bin/mocha test.js"
   },
   "keywords": [
     "ldap"
@@ -12,8 +12,10 @@
   "author": "detailyang",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "chai": "^3.5.0",
     "co": "^4.6.0",
+    "express": "^4.13.4",
     "ldapjs": "^1.0.0",
     "mocha": "^2.4.5",
     "request-promise": "^2.0.1",
