--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "author": "detailyang",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
     "chai": "^3.5.0",
     "co": "^4.6.0",
     "express": "^4.13.4",
     "ldapjs": "^1.0.0",
     "mocha": "^2.4.5",
+    "notp": "^2.0.3",
     "request-promise": "^2.0.1",
     "should": "^8.2.2",
+    "thirty-two": "^1.0.1",
     "winston": "^2.2.0",
     "winston-syslog": "^1.2.1"
   }
