--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: node_js
 node_js:
   - "4.2"
+addons:
+  apt:
+	 sources:
+	   - ubuntu-toolchain-r-test
+	 packages:
+	   - g++-4.8
 env:
   - NODE_ENV=test
 before_script:
