--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ node_js:
   - "4.2"
 addons:
   apt:
-	 sources:
-	   - ubuntu-toolchain-r-test
-	 packages:
-	   - g++-4.8
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-4.8
 env:
   - NODE_ENV=test
 before_script:
-  - apt-get install -qq gcc
+  - $CXX --version
   - node index.js &
   - node mock.js &
