--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ addons:
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - g++-4.8
+    - g++-4.9
+    - gcc-4.9
 env:
   - NODE_ENV=test
 before_script:
