--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ env:
   - NODE_ENV=test
   
 before_install:
-  - $CXX --version
+  - gcc --version
+  - g++ --version
   
 before_script:
   - node index.js &
