--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ env:
   - NODE_ENV=test
   
 before_install:
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 20
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 20
   - gcc --version
   - g++ --version
   
